# rollscore

./: .gitignore  BACKLOG.md  README.md  TASKS.md  decode_4se.py  extract_4sb.py  pyproject.toml
docs/: feature-coverage.md
docs/notes/: gaze-spike.md  staff-system-detection-spike.md  staff-system-grouping-research.md
docs/plans/: 2026-06-08-4sb-extractor.md  2026-06-13-gaze-scroll-web-app-design.md  2026-06-13-gaze-scroll-web-app-mvp.md  2026-06-21-crop-toggle.md
gazescroll/: __init__.py  app.py  cli.py  crop.py  ingest.py  library.py  render.py  state.py  systems.py
memory/: MEMORY.md  commit-memory-changes.md  crop-v1-overshoots-canvas.md  feedback-worktree-webgazer-symlink.md  forscore-annotation-extraction.md  forscore-filename-nfd.md  forscore-open-questions.md  gaze-calibration-degradation.md  gaze-scroll-web-app-design.md  gaze-tracking-alternatives.md  mvp-complete-phase-14-staffaware.md  no-copyrighted-pdfs-in-repo.md  ref-pmc7861241.md
openspec/changes/calibration-click-point/: design.md  proposal.md  tasks.md
openspec/changes/dual-gaze-dots/: design.md  proposal.md  tasks.md
openspec/changes/fix-active-system-snap/: design.md  proposal.md  tasks.md
openspec/changes/fix-calibration-persistence/: design.md  proposal.md  tasks.md
openspec/changes/gaze-calibration-recency/: design.md  proposal.md  tasks.md
openspec/changes/gaze-revert-premature-advance/: design.md  proposal.md  tasks.md
openspec/changes/phase-14-music-aware-scrolling/: design.md  proposal.md  tasks.md
openspec/changes/score-permalinks/: design.md  proposal.md  tasks.md
rollscore/: __init__.py  app.py  cli.py  crop.py  ingest.py  library.py  render.py  systems.py
tests/: conftest.py  test_api.py  test_app_smoke.py  test_cli.py  test_crop.py  test_extract_4sb.py  test_ingest.py  test_library.py  test_library_real.py  test_render.py  test_render_cache.py  test_render_golden.py  test_scaffold.py  test_state.py  test_systems.py
web/: index.html  package-lock.json  package.json  vitest.config.js
web/js/: api.js  chooser.js  controls.js  main.js  paths.js  reader.js  tuning.js
web/js/gaze/: calibration.js  (+4 more)
web/spike/: gaze-accuracy.html  serve.py
web/tests/: api.test.js  calibration.test.js  chooser.test.js  control.test.js  controls.test.js  gaze-pipeline.test.js  overlay.test.js  reader.test.js  smoke.test.js  source.test.js  tuning.test.js
web/tools/: calibration_smoke.py  tuning_smoke.py
(+45 files in other folders)
