[project]
name = "forscore-archive"
version = "0.1.0"
description = "Extract ForScore .4sb Archive files (documents + annotations) on Linux"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pymupdf>=1.24",
    "pillow>=10",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
