[project]
name = "forscore-archive"
version = "0.1.0"
description = "Extract ForScore .4sb Archive files (documents + annotations) on Linux"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pymupdf>=1.24",
    "pillow>=10",
    "numpy>=1.26",
]

[project.scripts]
# Run the reader server:  uv run gazescroll [--host H] [--port P] [--reload]
gazescroll = "gazescroll.cli:main"

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The reader package plus the standalone extractor module (imported by
# gazescroll.ingest) — both must be importable from the installed console script.
packages = ["gazescroll"]
force-include = { "extract_4sb.py" = "extract_4sb.py" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
