[project]
name = "rollscore"
version = "0.1.0"
description = "Hands-free sheet-music reader that scrolls continuously from sensor input (gaze); imports forScore .4sb archives"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pymupdf>=1.24",
    "pillow>=10",
    "numpy>=1.26",
]

[project.scripts]
# Run the reader server:  uv run rollscore [--host H] [--port P] [--reload]
rollscore = "rollscore.cli:main"

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The reader package plus the standalone extractor module (imported by
# rollscore.ingest) — both must be importable from the installed console script.
packages = ["rollscore"]
force-include = { "extract_4sb.py" = "extract_4sb.py" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
